Added unit test for :extend(input[type=text]).

--- a/test/Fixtures/lessjs/less/extend.less
+++ b/test/Fixtures/lessjs/less/extend.less
@@ -79,3 +79,8 @@ div.ext5,
 .cc:extend(.aa,.bb) {}
 .ee:extend(.dd all,.bb) {}
 .ff:extend(.dd,.bb all) {}
+
+input[type=text] {
+  margin: 0;
+}
+.ext10:extend(input[type=text]) {}
